--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <!-- First Grid: Logo & About -->
 <div class="w3-row">
-  <div class="w3-half w3-black w3-container w3-center" style="height:700px">
+  <div class="w3-half w3-orange w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
       <h1>My Logo</h1>
     </div>
@@ -22,10 +22,11 @@
   <div class="w3-half w3-yellow w3-container" style="height:700px">
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
-      <img src="http://MaryAdewole.github.io/giphy.gif" class="w3-margin w3-circle" alt="Person" style="width:50%">
+      <img src="http://MaryAdewole.github.io/IMG_6277_Facetune_01-01-2019-19-58-04.jpeg
+" class="w3-margin w3-circle" alt="Person" style="width:50%">
       <div class="w3-left-align w3-padding-large">
         <p>Hi welcome to my website</p>
-        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p>Thanks for viewing.</p>
       </div>
     </div>
   </div>
@@ -36,6 +37,9 @@
   <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
     <div class="w3-padding-64">
       <h2>My Work</h2>
+	  <p><a href="MaryAdewole management assignment.pdf"> Management Assignment </a>
+	  <a href= "Mary_adewole_Oluwaseun_new_resume.pdf"> My Resume </a>
+	  
       <p>Some of my latest projects.</p>
     </div>
     <div class="w3-row">
@@ -129,7 +133,7 @@
     <div class="w3-padding-64 w3-padding-large">
       <h1>Contact</h1>
       <p class="w3-opacity">GET IN TOUCH</p>
-      <form class="w3-container w3-card w3-padding-32 w3-white" action="https://formspree.io/<your email here>" method="POST">
+      <form class="w3-container w3-card w3-padding-32 w3-white" action="https://formspree.io/address@email.tld" method="POST" /> method="POST">
         <div class="w3-section">
           <label>Name</label>
           <input class="w3-input" style="width:100%;" type="text" required name="Name">
