--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
     <div class="w3-padding-64">
       <h2>My Work</h2>
-	  <p><a href="MaryAdewole management assignment.pdf"> Management Assignment </a>
+	  <p><a href=" "> Management Assignment </a>
 	  <a href= "Mary_adewole_Oluwaseun_new_resume.pdf"> My Resume </a>
 	  
       <p>Some of my latest projects.</p>
@@ -81,34 +81,34 @@
             <th>Where</th>
           </tr>
           <tr class="w3-white">
-            <td>2012-2016</td>
-            <td>The rest is history..</td>
-            <td>Lorem ipsum</td>
+            <td>2020-2022</td>
+            <td> operation analyst </td>
+            <td> Deloitte</td>
           </tr>
           <tr>
-            <td>2009-2012</td>
-            <td>Started my own company</td>
-            <td>My Garage</td>
+            <td>2023-2029</td>
+            <td> supply chain manager</td>
+            <td> Bp corporations </td>
           </tr>
           <tr class="w3-white">
-            <td>2008-2009</td>
-            <td>Started working for Lorem</td>
-            <td>London, UK</td>
+            <td>2030-2035</td>
+            <td>Operation Manager</td>
+            <td>Bp corporations London, UK</td>
           </tr>
           <tr>
-            <td>2005-2008</td>
-            <td>Degree in Bachelor of Design</td>
-            <td>Harvard, USA</td>
+            <td>2016-2018</td>
+            <td>Associate degree in Business</td>
+            <td>houston community college,houston USA</td>
           </tr>
           <tr class="w3-white">
-            <td>2002-2005</td>
+            <td>2018-2020</td>
             <td>Degree in Bachelor of Business</td>
-            <td>RMIT University, Melbourne, Australia</td>
+            <td> University of houston, Texas, United states</td>
           </tr>
           <tr class="w3-hide-medium">
-            <td>2002-2005</td>
-            <td>Degree in Bachelor of Business</td>
-            <td>RMIT University, Melbourne, Australiaa</td>
+            <td>2022-2024</td>
+            <td>Master Degree in Operations management</td>
+            <td> University of Texas, Austin Texas ,United states</td>
           </tr>
         </table>
       </div>
